# qodec

./: .gitignore  Cargo.toml  MIGRATION_PROVENANCE.json  README.md  demo.sh  flake.nix  qodec-bulk.sh  qodec-json.ps1
evals/interop/: .gitignore  README.md  analyze_ablation.py  analyze_codec_failures.py  curate_vg_run.py  doctor.py  manage.py  pyproject.toml  repos.lock.toml  run.py  run_ablation.py  run_reader.py  score.py  score_reader.py  score_vg.py  tools.lock.toml
evals/interop/adapters/: __init__.py  codegraph.py  fastcontext.py  graphify.py  headroom.py  qodec.py  rtk.py
evals/interop/analysis/l2-qwen2.5-coder-7b-alias-fold-ablation-v1/: README.md  SHA256SUMS  factorial.json  manifest.json  preflight.json  realized-stage-receipts.json  records.jsonl
evals/interop/analysis/l2-qwen2.5-coder-7b-alias-fold-ablation-v1/per-question/: build-log-rtk-log__n-errors.json  build-log-rtk-log__n-warnings.json  clap-derive-explore__def-path.json  clap-derive-explore__top-symbol.json  clap-derive-explore__trait-path.json  clap-derive-explore__trait.json  rg-output-rtk-grep__method.json  rtk-rg-derive-clap__file.json  rtk-rg-parser-clap__file.json  rtk-rg-parser-clap__symbol.json
evals/interop/analysis/l2-qwen2.5-coder-7b-alias-fold-closure-v1/: README.md  SHA256SUMS  factorial.json  manifest.json  preflight.json  realized-stage-receipts.json  records.jsonl
evals/interop/analysis/l2-qwen2.5-coder-7b-alias-fold-closure-v1/per-question/: build-log-rtk-log__n-errors.json  build-log-rtk-log__n-warnings.json  clap-derive-explore__def-path.json  clap-derive-explore__trait.json  (+6 more)
evals/interop/analysis/l2-qwen2.5-coder-7b-failure-decomp-v1/: README.md  SHA256SUMS  controls.json  losses.json  summary.json
evals/interop/bench/: __init__.py  ablation_policies.py  artifacts.py  doctor.py  durability.py  execution.py  failure_decomp.py  lockfiles.py  manifest.py  matrix.py  metrics.py  preflight.py  producers.py  qodec.py  reader.py  reader_tasks.py  runner.py  transforms.py
evals/interop/manifests/: corpus.json  rtk.json
evals/interop/prompts/: README.md
evals/interop/results/l2-cpu-qwen0.5b-v1/: README.md  SHA256SUMS  meta.json  preflight.json  records.jsonl  report.txt
evals/interop/results/l2-cpu-qwen2.5-coder-7b-v1/: README.md  SHA256SUMS  meta.json  preflight.json  records.jsonl  report.txt  stability.txt
evals/interop/results/l2-cpu-qwen2.5-coder-7b-vg-v1/: README.md  SHA256SUMS  manifest.json  meta.json  preflight.json  realized-stage-receipts-normalized.json  realized-stage-receipts.json  records.jsonl  report.txt  stability.txt
evals/interop/results/rtk-codegraph-clap-v1/: README.md  SHA256SUMS  doctor.json  score-codegraph.txt  score-rtk.txt
evals/interop/tasks/: README.md
evals/interop/tasks/reader/: tasks.json
evals/interop/tests/: test_ablation_analysis.py  test_ablation_policies.py  test_adapter_decode.py  test_durability.py  test_failure_decomp.py  test_hf_meter_parity.py  test_manifest.py  test_matrix_resume.py  test_producers.py  test_reader_analyze.py  test_reader_mock.py  test_reader_preflight.py  test_reader_scoring.py  test_realized_normalize.py  test_receipt.py  test_rtk.py  test_run_manifest.py  test_score_vg.py
evals/interop/v2/: README.md  benchmark-contract.json  coverage-matrix.json  dataset-source-map.md  execution-environment.md  external-baselines.md  heldout-policy.md  rtk-comparison-contract.json  rtk-implementation-map.md  rtk-output-grammar.json  rtk-qodec-composition-risks.md  validate_contract.py
evals/interop/v2/corpus/: README.md  corpus-contract.json  decisions.md  manifest.json
evals/interop/v2/pilot/: README.md  pilot-manifest.json
evals/interop/v2/schemas/: case.schema.json  question.schema.json  sealed-manifest.schema.json
evals/interop/v2/smoke/: README.md  run_smoke.py
evals/interop/v2/tests/: test_contract.py  test_rtk_comparison.py
(+938 files in other folders)
