[project]
name = "qodec-interop-bench"
version = "0.1.0"
description = "Layered context-optimization bench: is there residual, lossless, tokenizer-visible redundancy after Graphify/CodeGraph/RTK/Headroom/FastContext, and does comprehension survive removing it?"
requires-python = ">=3.11"
# Level 1 (run.py / score.py / doctor.py) needs NOTHING here — the standard
# library plus the built qodec binary. These dependencies are for the Level 2
# reader rung: a real tokenizer for the served model (o200k/cl100k are proxies;
# GLM/Qwen need their own), and an OpenAI-compatible client.
dependencies = [
  "tokenizers>=0.20",   # HF tokenizer meter for the reader model
  "httpx>=0.27",        # OpenAI-compatible endpoint client (vLLM / Colibrì)
]

[tool.uv]
# uv.lock is committed once the Level 2 rung is built; Level 1 does not depend
# on it. Keep Level 1 importable without `uv sync`.
package = false
